<resources>
    <string name="app_name">FindIt</string>
    <string name="home">Home</string>
    <string name="add_post">Add Post</string>
    <string name="location">Location</string>
    <string name="profile">Profile</string>
    <string name="email">Email</string>
    <string name="log_in">Log in</string>
    <string name="password">Password</string>
    <string name="you_don_t_have_an_account_register_now">You don\'t have an account? Register now</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account_log_in">Already have an account? Log in</string>
    <string name="phone_number">Phone Number</string>
    <string name="surname">Surname</string>
    <string name="name">Name</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_out">Log Out</string>
    <string name="my_profile">My Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_language">Change Language</string>
    <string name="change_theme">Change Theme</string>
    <string name="register_now">Register now</string>
    <string name="post">Post</string>
    <string name="add_description">Add Description</string>
    <string name="add_image">Add Image</string>
    <string name="add_location">Add Location</string>
    <string name="select_photo_source">Select Photo Source</string>
    <string name="choose_from_gallery">Choose from Gallery</string>
    <string name="cancel">Cancel</string>
    <string name="img" translatable="false">IMG_%1$s</string>
    <string name="jpg" translatable="false">.jpg</string>
    <string name="provider" translatable="false">%1$s.provider</string>
    <string name="image" translatable="false">image/*</string>
    <string name="lost">Lost</string>
    <string name="found">Found</string>
    <string name="posted_by">Posted by: %1$s</string>
    <string name="contact">Contact</string>
    <string name="view_location">View location</string>
    <string name="tel">tel:%1$s</string>
    <string name="fullname">%1$s %2$s</string>
    <string name="no_posts_found">No posts found</string>
    <string name="save">Save</string>
    <string name="phone">Phone</string>
    <string name="distance_km">Distance: %1$s km</string>
    <string name="failed_to_get_location">Failed to get location</string>
    <string name="location_permission_denied">Location permission denied</string>
    <string name="your_location">Your Location</string>
    <string name="item_location">Item Location</string>
    <string name="mark_location">Mark Location</string>
    <string name="login">Login</string>
    <string name="view_post">View Post</string>
    <string name="chat">Chat</string>
    <string name="type_a_message">Type a message</string>
    <string name="location_services_disabled">location services disabled</string>
    <string name="asking_for_location">asking for location</string>
    <string name="enable">Enable</string>
    <string name="my_posts">My Posts</string>
    <string name="search">Search...</string>
    <string name="change_location">Change location</string>
    <string name="welcome_username">Welcome Username</string>
    <string name="welcome">Welcome, %1$s</string>
    <string name="today">Today</string>
    <string name="last_week">Last Week</string>
    <string name="last_month">Last Month</string>
    <string name="apply">Apply</string>
    <string name="successfully_uploaded">successfully uploaded</string>
    <string name="change_image">Change image</string>
    <string name="user_not_loaded">User not loaded</string>
    <string name="profile_saved_successfully">Profile saved successfully</string>
    <string name="image_updated">Image updated</string>
    <string name="take_photo">Take Photo</string>
    <string name="post_details">Post Details</string>
    <string name="contact_information">Contact Information:</string>
</resources>