<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@color/white"
        tools:context=".presentation.screen.addpost.AddPostFragment">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/title_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_margin="24dp"
            android:textSize="26sp"
            android:text="@string/post"
            android:textColor="@color/black"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/description_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_id"
            android:layout_marginTop="48dp"
            android:layout_marginHorizontal="16dp"
            android:hint="@string/add_description"
            android:background="@color/white"
            android:textSize="22sp"
            android:padding="12dp"/>

        <TextView
            android:id="@+id/description_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/description_id"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginHorizontal="16dp"
            android:textColor="@color/red"
            android:visibility="gone"
            tools:text="Description is required"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/photo_id"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            app:layout_constraintTop_toBottomOf="@id/description_error"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:scaleType="centerCrop"
            android:layout_margin="12dp"
            android:visibility="gone"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/add_photo_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/photo_id"
            android:layout_margin="12dp"
            android:text="@string/add_image"
            android:textAllCaps="false"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/photo_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/add_photo_id"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginHorizontal="16dp"
            android:textColor="@color/red"
            android:visibility="gone"
            tools:text="Photo is required"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/add_location_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/photo_error"
            android:layout_margin="12dp"
            android:text="@string/add_location"
            android:textAllCaps="false"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/location_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/add_location_id"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginHorizontal="16dp"
            android:textColor="@color/red"
            android:visibility="gone"
            tools:text="Location is required"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/add_post_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/location_error"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="12dp"
            android:text="@string/add_post"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:layout_marginBottom="48dp"/>

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:visibility="gone"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>