<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/application_background"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/post_details"
            android:textSize="30sp"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginBottom="16dp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contact_information"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginBottom="8dp" />



        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="4dp"
            android:backgroundTint="@color/white"
            android:layout_marginBottom="16dp"
            app:cardCornerRadius="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp"
                android:gravity="center_vertical">



                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/iv_profile_picture"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:src="@drawable/user"
                    android:scaleType="centerCrop"
                    app:layout_constraintTop_toTopOf="parent"
                    android:background="@drawable/circle_background"
                    app:shapeAppearanceOverlay="@style/RoundImageShape"
                    />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingStart="12dp">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_user_fullname"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        tools:text="Jemal kakauridze" />
                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_user_email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="sergi@sij.asd"
                        android:textSize="14sp"
                        android:textColor="@color/black"/>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_phone_number"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="123-456-7890"
                        android:textColor="@android:color/holo_blue_dark"
                        android:textStyle="italic"
                        android:autoLink="none"
                        android:clickable="true"
                        android:focusable="true" />

                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_post_image"
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:scaleType="centerCrop"
            android:layout_marginBottom="12dp"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_post_timestamp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="2 hours ago"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:layout_marginBottom="8dp"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_post_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="Here’s the place where I lost my keys..."
            android:textSize="16sp"
            android:textColor="@color/black"
            android:layout_marginBottom="24dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginBottom="16dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_view_location"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/view_location"
                android:textAllCaps="false"
                app:strokeColor="@color/black"
                android:textColor="@color/black"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_contact_user"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:text="@string/contact"
                android:textColor="@color/white"
                android:backgroundTint="@color/black"
                android:textAllCaps="false"/>

        </LinearLayout>

    </LinearLayout>
</ScrollView>
